# HT-Lektion-3_neu

./: .gitignore  README.md  agent.py  config.py  gitignore.txt  main.py  pyproject.toml  requirements.txt  tools.py
example_output/: example_report_2024-01-01_120000.txt
output/: DEBUG 29.03.2026.txt  capabilities.txt  it_looks_like_2026-03-16.txt  it_seems_like_2026-03-16.txt  langgraph_langchain_двома_2026-03-16_204414.txt  pydantic_settings_is_2026-03-16.txt  retrieval_augmented_generation_2026-03-16.txt  retrieval_augmented_generation_2026-03-16_201531.txt  retrieval_augmented_generation_2026-03-16_204350.txt  the_pydantic_library_2026-03-16.txt  to_install_the_2026-03-16.txt  Взлетіло!!!!! )))))))).txt  багатоагентна_система_mas_2026-03-16_204439.txt  березні_2026_року_2026-03-16_200927.txt  березні_2026_року_2026-03-29_034050.txt  ви_вказали_шлях_2026-03-16.txt  вибачте_але_ваш_2026-03-16.txt  вітаю_можу_вам_2026-03-29_043034.txt  жаль_маю_можливості_2026-03-29_035326.txt  люк_бессон_відомий_2026-03-29_034139.txt  люк_бессон_відомий_2026-03-29_034203.txt  люк_бессон_відомий_2026-03-29_034953.txt  люк_бессон_відомий_2026-03-29_035150.txt  люк_бессон_відомий_2026-03-29_035257.txt  люк_бессон_відомий_2026-03-29_040447.txt  люк_бессон_відомий_2026-03-29_040529.txt  на_жаль_ви_2026-03-16.txt  на_жаль_результати_2026-03-16.txt  на_жаль_я_2026-03-16.txt  на_основі_наданих_2026-03-16.txt  основі_наданих_результатів_2026-03-16_203711.txt  основі_наданих_результатів_2026-03-16_204320.txt  основі_наданих_результатів_2026-03-16_204500.txt  (+16 more)
